--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,13 @@ dependencies:
   cloud_firestore: ^4.15.4
   firebase_auth: ^4.17.4
   intl: ^0.20.2
-  audioplayers: ^5.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
   flutter_test:
     sdk: flutter
 
@@ -49,6 +48,12 @@ flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/logo.jpeg"
+
+#flutter_native_splash:
+#  color: "#ffffff"
+#  image: assets/logo.png
+#  android: true
+#  ios: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -64,7 +69,7 @@ flutter_launcher_icons:
 flutter:
   assets:
     - assets/milk.jpg
-    - assets/logo.jpeg
+    - assets/logo.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
